# tui-project-manager

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  design-guideline.md  mvp-scope.md  project-plan.md  stage-2-roadmap.md
src/tpman/: app.py  cli.py
src/tpman/ai/: __init__.py  client.py  summarizer.py
src/tpman/db/: __init__.py  engine.py  repo.py  schema.py  session.py
src/tpman/ingest/: __init__.py  parser.py  sync.py
src/tpman/mcp/: server.py  tools.py
src/tpman/models/: __init__.py  phase.py  summary.py  task.py
src/tpman/tui/screens/: __init__.py  dashboard.py  project_detail.py  task_detail.py
src/tpman/tui/widgets/: __init__.py  project_list.py  summary_panel.py
src/tpman/utils/: logging.py  paths.py
src/vpm_tui/: __init__.py  app.py  cli.py  config.py
src/vpm_tui/ai/: __init__.py  client.py  summarizer.py
src/vpm_tui/db/: __init__.py  engine.py  repo.py  session.py
src/vpm_tui/ingest/: __init__.py  markdown_reader.py  parser.py  sync.py
src/vpm_tui/mcp/: server.py  tools.py
src/vpm_tui/models/: __init__.py  project.py
src/vpm_tui/tui/: theme.tcss
src/vpm_tui/tui/screens/: __init__.py  dashboard.py  project_detail.py  task_detail.py
src/vpm_tui/tui/widgets/: __init__.py  summary_panel.py  task_table.py
src/vpm_tui/utils/: dates.py
tests/: test_ai.py  test_cli.py  test_db.py  test_mcp.py  test_parser.py  test_sync.py
