[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpm-tui"
version = "0.1.0"
description = "Local-first terminal project manager for markdown-based trackers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.52",
    "rich>=13.0",
    "typer>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "markdown-it-py>=3.0",
    "mcp>=1.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
vpm-tui = "vpm_tui.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
